# stylist

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  searchindex.js  setup.cfg  setup.py  stylist.toml
.github/workflows/: performance.yml  publish.yml  pullrequest.yml  pythonapp.yml  pythonpackage.yml  release.yml  sphinx.yml
_sources/developer-information/: api.rst.txt  todo.rst.txt
_sources/user-manual/: preparation.rst.txt
_static/: documentation_options.js
benchmarks/Linux-CPython-3.7-64bit/: 0001_unversioned_20230425_143216.json  0002_unversioned_20230822_091841.json  0003_unversioned_20230822_122654.json  0004_unversioned_20230824_115929.json  0005_unversioned_20230825_085221.json  0006_unversioned_20231127_104809.json  0007_unversioned_20231127_105123.json  0008_unversioned_20231127_173235.json  0009_unversioned_20240104_164548.json
developer-information/: index.html
developer-information/api/: stylist.configuration.html  stylist.source.html  stylist.style.html
docs/: _config.yaml  about.md  index.md
docs/_posts/: 2022-04-04-Experimenting.md
documentation/: .gitignore  Makefile
documentation/source/: conf.py  developer-information.rst  index.rst
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_static/: documentation_options.js
latest/developer-information/: api.html  design.html  environment.html  future.html  index.html  overview.html  rules.html  todo.html
latest/html/: genindex.html  index.html  searchindex.js
latest/user-manual/: configuration.html  index.html  preparation.html  rule-list.html
lib-python/stylist/: rule.py  source.py  style.py
performance-tests/: class_test.py  conftest.py  examples.tar  file_test.py
source/stylist/: __init__.py  __main__.py  configuration.py  engine.py  (+5 more)
system-tests/: fortran_rules_test.py  simple_test.py  style_configuration_test.py  style_test.py
tests/: fortran_characterset_test.py  fortran_missing_implicit_test.py  fortran_missing_only_test.py  fortran_pointer_init_test.py  rule_test.py  source_test.py  style_test.py
uml/: CheckerDesign.puml  StylerDesign.puml
unit-tests/: __main__test.py  configuration_test.py  engine_test.py  fortran_auto_char_array_intent_test.py  fortran_characterset_test.py  fortran_forbid_usage_test.py  fortran_intrinsic_module_test.py  fortran_kind_pattern_test.py  fortran_labelled_do_exit_test.py  fortran_labelled_exit_test.py  fortran_missing_implicit_test.py  fortran_missing_intent_test.py  fortran_missing_only_test.py  fortran_naked_immediate_test.py  fortran_naked_literal_test.py  fortran_pointer_init_test.py  issue_test.py  rule_test.py  source_test.py  style_test.py
user-manual/: index.html  preparation.html
v0.3.1/: index.html  objects.inv  py-modindex.html
v0.4.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.4.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
(+169 files in other folders)
