[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name='stylist'
description="Flexible source code style checking tool"
requires-python = '>=3.7, <4'
license = {text = 'BSD 3-Clause License'}
classifiers = ['Programming Language :: Python :: 3']
dependencies = ['fparser >= 0.1.2']
dynamic = ['version', 'readme']


[project.optional-dependencies]
dev = ['check-manifest', 'flake8']
test = ['pytest', 'pytest-cov', 'mypy']
performance = ['pytest', 'pytest-benchmark', 'matplotlib']
docs = ['sphinx < 7.0.0',
        'sphinx-autodoc-typehints',
        'sphinx-rtd-theme>=1.2.2']
release = ['setuptools', 'wheel', 'twine']

[project.scripts]
stylist = 'stylist.__main__:main'

[project.urls]
homepage = 'https://github.com/MetOffice/stylist/'
documentation = 'https://metoffice.github.io/stylist'
'Bug Reports' = 'https://github.com/MetOffice/stylist/issues'
repository = 'https://github.com/MetOffice/stylist/'

[tool.setuptools.dynamic]
readme = {file = 'README.md'}
version = {attr = 'stylist.__version__'}

[tool.setuptools.packages.find]
where = ['source']
