[metadata]
name = stylist
description = Extensible code style checker currently supporting Fortran, PSyclone DSL, etc
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/MetOffice/stylist
author = Met Office
license = BSD 3-Clause
license_files = LICENSE
keywords = linter fortran psyclone
classifiers=Development Status :: 3 - Alpha
            Intended Audience :: Developers
            Topic :: Software Development :: Quality Assurance
            License :: OSI Approved :: BSD License
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
